# helix-hub-manus

./: .gitignore  CONTRIBUTING.md  MASTER_README.md  README.md  pyproject.toml  setup.py
docs/: GETTING_STARTED.md  INTEGRATION_GUIDE.md  QUICKSTART.md  index.html
examples/: autonomous_research.py
templates/portal-orchestrator/: README.md
templates/portal-orchestrator/config/: 51-portals-complete.json  51-portals.json  portal-schema.json
templates/portal-orchestrator/scripts/: generate-portal.js  mcp-integration.js
templates/portal-orchestrator/templates/base-portal/: README.md  package.json
templates/samsara-showcase/: CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  package.json  pnpm-lock.yaml  todo.md
templates/samsara-showcase/client/src/: App.tsx
templates/samsara-showcase/client/src/components/: AdminControlPanel.tsx  CollectiveAgentDashboard.tsx  FractalGallery.tsx  InteractiveGenerator.tsx  PresetSelector.tsx  RitualAnimationPlayer.tsx
templates/samsara-showcase/client/src/hooks/: useHelixSync.ts  useKeyboardShortcuts.ts  useUndoRedo.ts
templates/samsara-showcase/docs/: QA_CHECKLIST_FOR_CLAUDE_CODE.md  SMS_VOICE_CONTROL.md
templates/samsara-showcase/drizzle/: 0001_majestic_mole_man.sql  schema.ts
templates/samsara-showcase/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
templates/samsara-showcase/server/: db.ts  routers.ts
templates/samsara-showcase/server/routers/: zapier.ts
templates/samsara-showcase/server/services/: portalGenerator.test.ts  portalGenerator.ts
unified_llm/: __init__.py
(+4 files in other folders)
